<resources>
    <string name="app_name">Projek Login</string>
    <string name="login">Login</string>
    <string name="welcome_back">Selamat Datang Kembali!</string>
    <string name="user_regist">Daftar Pengguna</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Kata sandi</string>
    <string name="password_confirm">Tulis Ulang Kata Sandi</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="continue_with">Lanjutkan dengan</string>
    <string name="register">Daftar</string>
    <string name="register_en">Register</string>

</resources>